Initial commit for flyby-improvements